# pyatmo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  Pipfile  README.md  pyatmo.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  usage.md  version.py
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pythonpackage.yml  release_gh.yml
fixtures/: camera_data_empty.json  camera_data_events_until.json  camera_home_data.json  camera_home_data_no_homes.json  camera_set_state_error_wrong_parameter.json  getevents.json  getmeasure_12:34:56:00:00:a1:4c:da.json  getmeasure_sum_energy_buy_from_grid$1_98_76_54_32_10_00_00_49.json  getmeasure_sum_energy_buy_from_grid$2_98_76_54_32_10_00_00_49.json  getmeasure_sum_energy_buy_from_grid$2_98_76_54_32_10_00_00_73.json  getmeasure_sum_energy_buy_from_grid,sum_energy_buy_from_grid$0,sum_energy_buy_from_grid$1,sum_energy_buy_from_grid$2_12_34_56_00_00_a1_4c_da.json  getmeasure_sum_energy_buy_from_grid,sum_energy_buy_from_grid$0,sum_energy_buy_from_grid$1,sum_energy_buy_from_grid$2_98_76_54_32_10_00_00_69.json  getmeasure_sum_energy_elec$1_98_76_54_32_10_00_00_73.json  getpublicdata.json  getstationsdata.json  home_coach_no_devices.json  home_coach_simple.json  home_data_empty.json  home_data_no_homes.json  home_data_simple.json  home_multi_status_error_disconnected.json  home_status_empty.json  home_status_error_disconnected.json  home_status_error_invalid_schedule_id.json  home_status_error_missing_home_id.json  home_status_error_mode_is_missing.json  home_status_simple.json  homesdata.json  homesdata_empty.json  homesdata_emtpy_home.json  homesdata_multi.json  homestatus_91763b24c43d3e344f424e8b.json  homestatus_91763b24c43d3e344f424e8c.json  invalid_grant.json  oauth2_token.json  public_data_error_mongo.json  public_data_simple.json  status_ok.json  sync_schedule_591b54a2764ff4d50d8b5795.json  sync_schedule_b1b54a2f45795764f59d50d8.json  (+4 more)
fixtures/archive/: camera_home_data.json  camera_home_data_disconnected.json  camera_set_state_error.json  camera_set_state_error_already_on.json  camera_set_state_ok.json  error_scope.json  home_data_no_devices.json  home_data_nohomename.json  home_status_error_and_data.json  home_status_error_invalid_id.json  home_status_error_missing_parameters.json  home_status_error_mode_not_authorized.json  public_data_error_mongo.json  too_many_connections.json
pyatmo/: Auth.py  Camera.py  HomeCoach.py  PublicData.py  Thermostat.py  WeatherStation.py  __init__.py  __main__.py  auth.py  camera.py  helpers.py  public_data.py  thermostat.py  weather_station.py
samples/: graphLast3Days  printAllLastData  simpleLastData  smsAlarm
smart_home/: Camera.py  HomeCoach.py  PublicData.py  Thermostat.py  WeatherStation.py  __init__.py
src/: version.py
src/pyatmo/: __init__.py  __main__.py  account.py  auth.py  base_class.py  camera.py  climate.py  const.py  device_types.py  enums.py  event.py  exceptions.py  helpers.py  home.py  home_coach.py  module.py  person.py  public_data.py  room.py  schedule.py  thermostat.py  weather_station.py
src/pyatmo/modules/: __init__.py  base_class.py  bticino.py  device_types.py  idiamant.py  legrand.py  module.py  netatmo.py  smarther.py  somfy.py
tests/: common.py  conftest.py  test_async.py  test_camera.py  test_climate.py  test_energy.py  test_fan.py  test_home.py  test_pyatmo.py  test_pyatmo_camera.py  test_pyatmo_climate.py  test_pyatmo_homecoach.py  test_pyatmo_publicdata.py  test_pyatmo_refactor.py  test_pyatmo_thermostat.py  test_pyatmo_weatherstation.py  test_shutter.py  test_smart_home.py  test_smart_home_camera.py  test_smart_home_homecoach.py  test_smart_home_publicdata.py  test_smart_home_thermostat.py  test_smart_home_weatherstation.py  test_smarthome_publicdata.py  test_switch.py  test_weather.py  testing_main_template.py
