[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]

[project]
authors = [
    { email = "jabesq@gmail.com", name = "Hugo Dupras" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.7.4,<4.0.0",
    "oauthlib~=3.1",
    "requests-oauthlib>=1.3,<3.0",
    "requests~=2.24",
]
description = "Simple API to access Netatmo weather station data from any Python 3 script. Designed for Home Assistant (but not only)"
dynamic = [
    "version",
]
maintainers = [
    { email = "cgtobi@gmail.com", name = "Tobias Sauerwein" },
    { email = "jabesq@gmail.com", name = "Hugo Dupras" },
]
name = "pyatmo"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[project.urls]
Changelog = "https://github.com/jabesq-org/pyatmo/blob/development/CHANGELOG.md"
Homepage = "https://github.com/jabesq-org/pyatmo"
Issues = "https://github.com/jabesq-org/pyatmo/issues"
Repository = "https://github.com/jabesq-org/pyatmo.git"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
minversion = "8.0"

[tool.ruff]
fix = true
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D406", # Section name should end with a newline
    "D407", # Section name underlining
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
    "N818", # Exception should be named with an Error suffix
    # False positives https://github.com/astral-sh/ruff/issues/5386
    "PLC0208", # Use a sequence type instead of a `set` when iterating over values
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "UP006",   # keep type annotation style as is
    "UP007",   # keep type annotation style as is
    # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    # need cleanup
    "FBT001",
    "FBT002",
    "FBT003",
    "DTZ006",
    "DTZ005",
    "PGH003",
]
select = [
    "ALL",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api.pytz]
msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"src/pyatmo/__main__.py" = [
    "T201",
]
"src/pyatmo/auth.py" = [
    "ASYNC109",
]
"src/pyatmo/modules/module.py" = [
    "PGH003",
]
"tests/*" = [
    "A001",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ARG001",
    "ASYNC230",
    "D10",
    "DTZ001",
    "N802",
    "PT012",
    "PTH123",
    "S101",
    "S105",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "codespell>=2.3.0",
    "docutils>=0.21.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "ruff>=0.6.4",
    "time-machine>=2.15.0",
    "tox-uv>=1.25.0",
    "twine>=6.1.0",
]
