[metadata]
description-file = README.md

[flake8]
max-line-length = 88
ignore = W503, E501

[pep8]
max-line-length = 88
ignore = W503, E501

[mypy]
ignore_errors = True
ignore_missing_imports = True

[mypy-pyatmo.auth]
ignore_errors = False

[mypy-pyatmo.camera]
ignore_errors = False

[mypy-pyatmo.exceptions]
ignore_errors = False

[mypy-pyatmo.helpers]
ignore_errors = False

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
forced_separate = tests
combine_as_imports = true
line_length=88
not_skip = __init__.py
skip_glob = venv
known_first_party = pyatmo
