[metadata]
name = pyatmo
version = attr:version.__version__
description = Simple API to access Netatmo weather station data from any Python 3 script. Designed for Home-Assitant (but not only)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jabesq/netatmo-api-python
author = Hugo Dupras
author_email = jabesq@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Home Automation

[options]
packages = find:
py_modules = version
install_requires =
    oauthlib>=3.1.0
    requests>=2.23.0
    requests_oauthlib>=1.3.0
python_requires = >=3.7
package_dir = =src

[options.packages.find]
exclude = tests
where = src

[flake8]
max-line-length = 88
ignore = W503, E501

[pep8]
max-line-length = 88
ignore = W503, E501

[mypy]
ignore_errors = True
ignore_missing_imports = True

[mypy-pyatmo.auth]
ignore_errors = False

[mypy-pyatmo.camera]
ignore_errors = False

[mypy-pyatmo.exceptions]
ignore_errors = False

[mypy-pyatmo.helpers]
ignore_errors = False

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
forced_separate = tests
combine_as_imports = true
line_length = 88
skip_glob = venv
known_third_party = freezegun,oauthlib,pytest,requests,requests_oauthlib,setuptools,tests
