[metadata]
name = pyatmo
version = attr:version.__version__
description = Simple API to access Netatmo weather station data from any Python 3 script. Designed for Home-Assitant (but not only)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jabesq/pyatmo
author = Hugo Dupras
author_email = jabesq@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Home Automation

[options]
packages = find:
py_modules = version
install_requires =
    aiohttp~=3.7.4.post0
    oauthlib~=3.1
    requests~=2.24
    requests_oauthlib~=1.3
python_requires = ~=3.8
include_package_data = True
package_dir = =src

[options.packages.find]
where = src
exclude = tests

[options.package_data]
pyatmo = py.typed

[flake8]
max-line-length = 88
ignore = W503, E501

[pep8]
max-line-length = 88
ignore = W503, E501

[mypy]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
forced_separate = tests
combine_as_imports = true
line_length = 88
skip_glob = venv
known_third_party = freezegun,oauthlib,pytest,requests,requests_oauthlib,setuptools,tests
